--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,10 @@
 }
 
 body{
-    background-color: var(--color-bg);
+    
+    background: url("../images/bg-header-desktop.svg"),  var(--color-bg);
+    background-size: 100% 100px;
+    background-repeat: no-repeat;
     font-family: 'Spartan', sans-serif;
     font-size: .9375rem;
     color: var(--color-primary-dark);
@@ -28,7 +31,7 @@ body{
 .container{
     max-width: 320px;
     width: 90%;
-    margin: 5em auto 3em;
+    margin: 10em auto 2em;
 }
 
 .d-flex{
@@ -120,8 +123,8 @@ body{
 
     .company-icon{
         position: unset;
-        width: auto;
-        height: auto;
+        width: 95px;
+        height: 95px;
     }
 }
 
